# Serializer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Example/: example.cpp
Source/: SBuffer.h  Serializer.cpp  Serializer.h
Test/: Serialization.h  Test.cpp
